--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: create output
         run: |
           mkdir output,
-          cp . /output
+          cp -r . /output
 
       # Runs a set of commands using the runners shell
      # - name: Run a multi-line script
