--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       # Runs a single command using the runners shell
       - name: create output
         run: |
-          mkdir output,
-          cp -r . /output
+          sudo mkdir output,
+          sudo cp -r . /output
 
       # Runs a set of commands using the runners shell
      # - name: Run a multi-line script
