--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,7 @@ jobs:
           destination-repository-name: "thecyberalliance.github.io"
           # Email for the git commit
           user-email: "tca_sitaics@gmail.com"
+          # Destination Username
+          destination-repository-username: "thecyberalliance"
           # Target Branch for the git commit
           target-branch: "main"
